--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve --port 4229",
     "build": "ng build",
+    "sonar": "sonar-scanner",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
